# routes/recipes.js
@@ -5,6 +5,19 @@ const recipes_utils = require("./utils/recipes_utils");
 router.get("/", (req, res) => res.send("im here"));
 
 
+//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+router.get("/random", async (req, res, next) => {
+  try {
+    const random3_recipes = await recipes_utils.getRandomThreeRecipes();
+    res.send(random3_recipes);
+  } catch (error) {
+    next(error);
+  }
+})
+
+//~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
 /**
  * This path returns a full details of a recipe by its id
  */
@@ -16,5 +29,9 @@ router.get("/:recipeId", async (req, res, next) => {
     next(error);
   }
 });
+
+
+
+
 
 module.exports = router;
